--- a/view.html
+++ b/view.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Star Wars - Express</title>
-    <!-- Latest compiled and minified CSS & JS -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -53,25 +52,6 @@
               </div>
             </div>
           </div>
-
-          <div class="card">
-            <div class="card-header">
-              <h3><strong>Character Statistics</strong></h3>
-            </div>
-            <div class="card-body">
-              <h2 id="name">Yoda</h2>
-              <div id="stats">
-                <h3>
-                  <strong>Role:</strong> <span id="role">Jedi Master</span>
-                </h3>
-                <h3><strong>Age:</strong> <span id="age">900</span></h3>
-                <h3>
-                  <strong>Force Points:</strong>
-                  <span id="force-points">2000</span>
-                </h3>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -87,7 +67,7 @@
         // You can read more about RegEx Patterns later https://www.regexbuddy.com/regex.html
         searchedCharacter = searchedCharacter.replace(/\s+/g, '').toLowerCase();
 
-        $.get('/api/characters/' + searchedCharacter, function(data) {
+        $.get('/api/characters/' + searchedCharacter, data => {
           console.log(data);
           if (data) {
             $('#stats').show();
